# ManejoDeOperadores

./: CMakeLists.txt  cuentaBancaria.cpp  evaluacionAdmisiones.cpp  gestionPermisos.cpp  main.cpp  operadoresAsignacion.cpp  operadoresBitwise.cpp  operadoresIncrementoPrePost.cpp  operadoresLogicosRelacionales.cpp  tolkensAlternativos.cpp
